# censusdis-cli-demo

./: .gitignore  README.md  data1.yaml  fraction.yaml  group.yaml  hudson.yaml  pyproject.toml
downloading-data/: counties.yaml  fracleaves.yaml  hudson.yaml  leaves.yaml  ratio.yaml  states.yaml  tracts.yaml
plotting/: plot-income2.yaml  seeing-white-data.yaml  seeing-white-plot.yaml
