[tool.poetry]
name = "censusdis-cli-demo"
version = "0.1.0"
description = ""
authors = ["vengroff <vengroff@gmail.com>"]
readme = "README.md"
packages = [{include = "censusdis_cli_demo"}]

[tool.poetry.dependencies]
python = "^3.11"
censusdis = "^0.99.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
